general changes, todo:extra projects and main picture.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/krlogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Shaq | Portfolio</title>
+    <title>Kyle Rose | Portfolio</title>
   </head>
   <body class="bg-night">
     <div id="root"></div>
